<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/billing_address_us" android:padding="@dimen/rjhogh" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="@color/black" android:id="@id/address_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/djcbow_f" />
    <EditText android:textColor="@color/black" android:id="@id/name_on_card" android:tag="name on card" android:nextFocusDown="@id/last_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:hint="@string/emjhruhnu" android:singleLine="true" android:inputType="textPersonName|textCapWords" />
    <EditText android:textColor="@color/black" android:id="@id/date_of_birth" android:tag="date of birth" android:nextFocusDown="@id/zip_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/kgnj_rtce" android:singleLine="true" android:inputType="none" />
    <EditText android:textColor="@color/black" android:id="@id/zip_code" android:tag="zip code" android:nextFocusDown="@id/address_line_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/rpljghm" android:inputType="textPostalAddress" />
    <EditText android:textColor="@color/black" android:id="@id/address_line_1" android:tag="street address" android:nextFocusDown="@id/registration_new_phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:hint="@string/qbutbnnu" android:inputType="textPostalAddress" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/phone_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="16.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ffb8b8b8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+" />
        <EditText android:textColor="@color/black" android:gravity="center" android:id="@id/registration_new_cc" android:tag="phone prefix" android:layout_width="@dimen/nhnblcqs" android:layout_height="wrap_content" android:singleLine="true" android:digits="\ 0123456789" android:inputType="phone" />
        <EditText android:textColor="@color/black" android:id="@id/registration_new_phone" android:tag="phone number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/dvtbedvn" android:singleLine="true" android:layout_weight="1.0" android:inputType="phone" />
    </LinearLayout>
    <TextView android:textSize="15.0sp" android:textColor="@color/credit_card_invalid_text_color" android:id="@id/error_message_address" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/ollahbh" />
</LinearLayout>