<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/cards_bg" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/auth_login" android:background="@drawable/bg_post_comments_top" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="55.0dip" android:hint="@string/snqmigjjq" android:inputType="textEmailAddress" style="@style/CardTextEdit">
            <requestFocus />
        </EditText>
        <EditText android:id="@id/auth_pass" android:background="@drawable/bg_post_comments_btm" android:paddingTop="10.0dip" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="54.0dip" android:hint="@string/gkhdpmijf" android:inputType="textPassword" style="@style/CardTextEdit" />
        <Button android:textSize="16.0dip" android:textColor="@color/black" android:id="@id/auth_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="8.0dip" android:text="@string/qp_fiktd" />
        <TextView android:textSize="15.0sp" android:textColor="@color/credit_card_invalid_text_color" android:id="@id/error_message" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="5.0dip" android:text="@string/ollahbh" />
    </LinearLayout>
</ScrollView>