<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="16.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/pp_logo_pp_header" />
            <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="14.0sp" android:textColor="#ff0079c1" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ukejsn" />
                <ImageView android:background="@drawable/pp_icon_options" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:paddingTop="32.0dip" android:paddingBottom="15.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <EditText android:textSize="18.0sp" android:id="@id/pp_etEmail" android:background="@drawable/pp_edit_text_holo_dark" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/dnrvcwk" android:ems="10" android:inputType="textEmailAddress" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="18.0sp" android:id="@id/pp_password" android:background="@drawable/pp_edit_text_holo_dark" android:layout_width="fill_parent" android:layout_height="40.0dip" android:hint="@string/icmvmg" android:ems="10" android:inputType="textPassword" />
            <View android:visibility="visible" android:layout_width="1.0dip" android:layout_height="7.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip">
                <Button android:textSize="20.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/pp_bttnLogin" android:background="@drawable/pp_blue_button_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/trjcmqe" />
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0sp" android:textColor="#ff0079c1" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/ob_tbmo" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>