<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:id="@id/addcreditcard_fields" android:padding="@dimen/rjhogh" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="22.0sp" android:textColor="@color/black" android:id="@id/addcreditcard_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/jbunchnq" />
    <TextView android:textSize="17.0sp" android:textColor="@color/black" android:id="@id/addcreditcard_header_details" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/iufpgbk" android:layout_below="@id/addcreditcard_header" />
    <LinearLayout android:orientation="vertical" android:id="@id/hkid_section" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/addcreditcard_header_details">
        <EditText android:textColor="@color/black" android:id="@id/hkid_entry" android:nextFocusUp="@id/cvc_entry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/ooffso" android:singleLine="true" android:maxLength="7" android:inputType="textNoSuggestions" />
        <TextView android:textSize="12.0sp" android:textColor="@color/grey" android:gravity="right" android:id="@id/hkid_help" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/sfvodqkjwhe" android:layout_below="@id/hkid_entry" />
    </LinearLayout>
    <View android:id="@id/header_space" android:layout_width="fill_parent" android:layout_height="8.0dip" android:layout_below="@id/hkid_section" />
    <ImageView android:id="@id/visa_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/qvstew" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_visa" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/mastercard_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_master" android:layout_toRightOf="@id/visa_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/amex_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_amex" android:layout_toRightOf="@id/mastercard_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/discover_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_discover" android:layout_toRightOf="@id/amex_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/jcb_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_jcb" android:layout_toRightOf="@id/discover_logo" android:layout_below="@id/header_space" />
    <ImageView android:id="@id/general_logo" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="8.0dip" android:src="@drawable/credit_cards_general" android:layout_below="@id/header_space" />
    <org.blhelper.vrtwidget.billing.wKHGOrJvKo android:textColor="@color/black" android:id="@id/cc_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:hint="@string/gfckmt_p" android:singleLine="true" android:layout_below="@id/visa_logo" android:inputType="number" style="@android:style/Widget.EditText" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:id="@id/cc_box_concealed" android:paddingLeft="12.0dip" android:paddingTop="6.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ivp_kum" android:freezesText="true" android:layout_alignBaseline="@id/cc_box" />
    <EditText android:textColor="@color/black" android:id="@id/expiration_date_entry_1st" android:visibility="invisible" android:nextFocusUp="@id/cc_box" android:nextFocusDown="@id/expiration_date_entry_2nd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/ude_rdp" android:ems="3" android:singleLine="true" android:maxLength="2" android:layout_below="@id/cc_box" android:inputType="number" />
    <TextView android:textColor="@color/black" android:id="@id/expiration_date_separator" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/skhds_i" android:layout_toRightOf="@id/expiration_date_entry_1st" android:layout_alignBaseline="@id/expiration_date_entry_1st" />
    <EditText android:textColor="@color/black" android:id="@id/expiration_date_entry_2nd" android:visibility="invisible" android:nextFocusUp="@id/expiration_date_entry_1st" android:nextFocusDown="@id/cvc_entry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/mhrpckgn" android:ems="3" android:singleLine="true" android:maxLength="2" android:layout_toRightOf="@id/expiration_date_separator" android:layout_alignBaseline="@id/expiration_date_entry_1st" android:inputType="number" android:imeOptions="actionNext" />
    <EditText android:textColor="@color/black" android:id="@id/cvc_entry" android:visibility="invisible" android:nextFocusUp="@id/expiration_date_entry_2nd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/cvc_code" android:ems="4" android:singleLine="true" android:layout_alignBaseline="@id/expiration_date_entry_1st" android:layout_alignRight="@id/cc_box" android:inputType="number" />
    <ImageView android:id="@id/cvc_image" android:background="@drawable/highlight_overlay_light" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cvc_hint" android:layout_toLeftOf="@id/cvc_entry" android:layout_alignTop="@id/expiration_date_entry_1st" android:layout_alignBottom="@id/expiration_date_entry_1st" />
</RelativeLayout>