<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/black" android:id="@id/change_number_new_number" android:paddingLeft="16.0dip" android:paddingTop="32.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/wkrpgcws" android:layout_weight="1.0" style="@style/ChangeNumberText.Description" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/registration_new_fields" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="16.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ffb8b8b8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="+" />
        <EditText android:gravity="center" android:id="@id/registration_new_cc" android:layout_width="@dimen/nhnblcqs" android:layout_height="wrap_content" android:singleLine="true" android:digits="\ 0123456789" android:inputType="phone" />
        <EditText android:textColor="#ff000000" android:textColorHint="#ff888888" android:ellipsize="end" android:id="@id/registration_new_phone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/pjbkrcvc" android:singleLine="true" android:selectAllOnFocus="true" android:layout_weight="1.0" android:inputType="phone" android:imeOptions="actionDone" />
    </LinearLayout>
    <include layout="@layout/vljvumg" />
    <TextView android:textSize="15.0sp" android:textColor="@color/credit_card_invalid_text_color" android:id="@id/error_message" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="5.0dip" android:text="@string/ollahbh" />
</LinearLayout>